# sfml-game

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  sfml-platformer.sln  §1
.cache/clangd/index/: Angle.hpp.D9DE473094F70DD3.idx  Angle.inl.D65569EF4A26BECF.idx  AudioDevice.cpp.1BDC7FBF5D0DE25F.idx  AudioDevice.hpp.7A0DD7DBF2D03CBC.idx  AudioResource.cpp.23E310287675325F.idx  AudioResource.hpp.A7E449EF455BBB03.idx  AutoreleasePoolWrapper.hpp.567ABF02DDDE1D24.idx  AutoreleasePoolWrapper.mm.78852BE8DBE59142.idx  BlendMode.cpp.2C47698869C72A8E.idx  BlendMode.hpp.D2F598D5D3CD70EE.idx  CircleShape.cpp.2E506BD5BC46DC99.idx  CircleShape.hpp.38C1EC9AA2623C5C.idx  Clipboard.cpp.D76AE89762CA255A.idx  Clipboard.hpp.359567079FFE0624.idx  ClipboardImpl.hpp.0C34E7549563E71D.idx  ClipboardImpl.hpp.F13B966EE042DFEE.idx  ClipboardImpl.mm.47ABD5A5D7728E4D.idx  Clock.cpp.AEA578FCD99383BF.idx  Clock.hpp.BFBBF119553FAB4D.idx  Color.hpp.F40DB4E472C7EDF1.idx  Color.inl.8EC8503D85BA1857.idx  Config.hpp.88E5CDCF824DF88F.idx  Context.cpp.1247D6873FE9C769.idx  Context.hpp.B3CE210DB57175CC.idx  ContextSettings.hpp.235A463C958859E2.idx  ConvexShape.cpp.D36F471A8C92E050.idx  ConvexShape.hpp.6D2197ACC4DC4104.idx  CoordinateType.hpp.8A12E6AD190DCFA1.idx  Cursor.cpp.0A9A3280DE88CC4E.idx  Cursor.hpp.740754122E002A5F.idx  CursorImpl.hpp.74A51BACC4FF1B70.idx  CursorImpl.hpp.97BD6F772F476A24.idx  CursorImpl.mm.027D7B7E3899C4E8.idx  Drawable.hpp.93BBA068BA74AD61.idx  EnumArray.hpp.78AF34D42F109108.idx  Err.cpp.1F2A58B75635EA50.idx  Err.hpp.52A3B136A9E78B3F.idx  Event.hpp.684591E492C42E31.idx  Event.inl.7AAA89EA433E203D.idx  Exception.hpp.FDA899498531A199.idx  (+258 more)
include/: global_config.hpp
resources/world/: map.tmx
sfml-platformer/: camera.cpp  camera.h  entity.h  game.cpp  game.h  main.cpp  player.cpp  player.h  sfml-platformer.vcxproj  sfml-platformer.vcxproj.filters  world.cpp  world.h
sfml-platformer/res/world/: map.tmx
sfml-platformer/x64/Debug/: sfml-platformer.exe.recipe  vc143.idb
sfml-platformer/x64/Debug/sfml-platformer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  sfml-platformer.lastbuildstate
src/: animation.cpp  animation.hpp  camera.cpp  camera.h  camera.hpp  entity.h  entity.hpp  game.cpp  game.h  game.hpp  main.cpp  player.cpp  player.h  player.hpp  projectile.cpp  projectile.hpp  static_entity.cpp  static_entity.hpp  terrain.cpp  terrain.hpp  world.cpp  world.h  world.hpp
